RESOLVED FIXED142196
AX: WebKit does not expose text fields inside tree views.
https://bugs.webkit.org/show_bug.cgi?id=142196
Summary AX: WebKit does not expose text fields inside tree views.
James Craig
Reported 2015-03-02 16:11:53 PST
Created attachment 247713 [details] test case A customer has written in with the attached test case. WebKit does not expose text fields inside tree views.
Attachments
test case (226 bytes, text/html)
2015-03-02 16:11 PST, James Craig
no flags
fix bug patch (5.20 KB, patch)
2015-04-21 12:13 PDT, Nan Wang
no flags
Archive of layout-test-results from ews101 for mac-mavericks (529.38 KB, application/zip)
2015-04-21 13:02 PDT, Build Bot
no flags
patch2 (4.99 KB, patch)
2015-04-21 22:28 PDT, Nan Wang
no flags
Archive of layout-test-results from ews103 for mac-mavericks (541.73 KB, application/zip)
2015-04-21 23:03 PDT, Build Bot
no flags
patch3 fix broken test cases (7.06 KB, patch)
2015-04-22 00:09 PDT, Nan Wang
no flags
patch4 fix code style (7.06 KB, patch)
2015-04-22 00:15 PDT, Nan Wang
no flags
Radar WebKit Bug Importer
Comment 1 2015-03-02 16:12:10 PST
Nan Wang
Comment 2 2015-04-21 12:13:22 PDT
Created attachment 251252 [details] fix bug patch
Build Bot
Comment 3 2015-04-21 13:02:31 PDT
Comment on attachment 251252 [details] fix bug patch Attachment 251252 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/4994674502664192 New failing tests: platform/mac/accessibility/search-predicate.html
Build Bot
Comment 4 2015-04-21 13:02:35 PDT
Created attachment 251258 [details] Archive of layout-test-results from ews101 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews101 Port: mac-mavericks Platform: Mac OS X 10.9.5
chris fleizach
Comment 5 2015-04-21 18:20:03 PDT
Comment on attachment 251252 [details] fix bug patch View in context: https://bugs.webkit.org/attachment.cgi?id=251252&action=review Looks like accessibility/treeitem-child-exposed.html is missing from the patch > Source/WebCore/ChangeLog:6 > + Reviewed by NOBODY (OOPS!). can you add a short comment here as to what the bug was and how you fixed it
chris fleizach
Comment 6 2015-04-21 18:21:03 PDT
(In reply to comment #5) > Comment on attachment 251252 [details] > fix bug patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=251252&action=review > > Looks like > accessibility/treeitem-child-exposed.html > is missing from the patch > > > Source/WebCore/ChangeLog:6 > > + Reviewed by NOBODY (OOPS!). > > can you add a short comment here as to what the bug was and how you fixed it Also make sure to run the accessibity tests ./Tools/Scripts/run-webkit-tests --debug accessibility Thanks!
Nan Wang
Comment 7 2015-04-21 22:28:40 PDT
Nan Wang
Comment 8 2015-04-21 22:31:37 PDT
(In reply to comment #6) > (In reply to comment #5) > > Comment on attachment 251252 [details] > > fix bug patch > > > > View in context: > > https://bugs.webkit.org/attachment.cgi?id=251252&action=review > > > > Looks like > > accessibility/treeitem-child-exposed.html > > is missing from the patch > > > > > Source/WebCore/ChangeLog:6 > > > + Reviewed by NOBODY (OOPS!). > > > > can you add a short comment here as to what the bug was and how you fixed it > > Also make sure to run the accessibity tests > > ./Tools/Scripts/run-webkit-tests --debug accessibility > > Thanks! Had run the tests, got: Expected to fail, but passed: (2) platform/mac/accessibility/alt-for-css-content.html platform/mac/accessibility/webkit-alt-for-css-content.html This happened even without my fix, should I worry about it? Thanks.
Build Bot
Comment 9 2015-04-21 23:03:31 PDT
Comment on attachment 251302 [details] patch2 Attachment 251302 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/4878303974391808 New failing tests: platform/mac/accessibility/search-predicate.html
Build Bot
Comment 10 2015-04-21 23:03:36 PDT
Created attachment 251303 [details] Archive of layout-test-results from ews103 for mac-mavericks The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-mavericks Platform: Mac OS X 10.9.5
chris fleizach
Comment 11 2015-04-21 23:04:51 PDT
(In reply to comment #10) > Created attachment 251303 [details] > Archive of layout-test-results from ews103 for mac-mavericks > > The attached test failures were seen while running run-webkit-tests on the > mac-ews. > Bot: ews103 Port: mac-mavericks Platform: Mac OS X 10.9.5 This seems like a real failure this one PASS resultElement.role is 'AXRole: AXOutline' -PASS resultElement.childAtIndex(0).childAtIndex(0).stringValue is 'AXValue: tree item' +FAIL resultElement.childAtIndex(0).childAtIndex(0).stringValue should be AXValue: tree item. Was AXValue: •. PASS resultElement.role is 'AXRole: AXStaticText'
Nan Wang
Comment 12 2015-04-21 23:25:06 PDT
(In reply to comment #11) > (In reply to comment #10) > > Created attachment 251303 [details] > > Archive of layout-test-results from ews103 for mac-mavericks > > > > The attached test failures were seen while running run-webkit-tests on the > > mac-ews. > > Bot: ews103 Port: mac-mavericks Platform: Mac OS X 10.9.5 > > This seems like a real failure this one > > PASS resultElement.role is 'AXRole: AXOutline' > -PASS resultElement.childAtIndex(0).childAtIndex(0).stringValue is 'AXValue: > tree item' > +FAIL resultElement.childAtIndex(0).childAtIndex(0).stringValue should be > AXValue: tree item. Was AXValue: •. > PASS resultElement.role is 'AXRole: AXStaticText' Since the fix is exposing all children of treeitem, the test is failed because the text is the second child of the treeitem. Can I change the test case to get childAtIndex(1)? Thanks
chris fleizach
Comment 13 2015-04-21 23:41:56 PDT
(In reply to comment #12) > (In reply to comment #11) > > (In reply to comment #10) > > > Created attachment 251303 [details] > > > Archive of layout-test-results from ews103 for mac-mavericks > > > > > > The attached test failures were seen while running run-webkit-tests on the > > > mac-ews. > > > Bot: ews103 Port: mac-mavericks Platform: Mac OS X 10.9.5 > > > > This seems like a real failure this one > > > > PASS resultElement.role is 'AXRole: AXOutline' > > -PASS resultElement.childAtIndex(0).childAtIndex(0).stringValue is 'AXValue: > > tree item' > > +FAIL resultElement.childAtIndex(0).childAtIndex(0).stringValue should be > > AXValue: tree item. Was AXValue: •. > > PASS resultElement.role is 'AXRole: AXStaticText' > > Since the fix is exposing all children of treeitem, the test is failed > because the text is the second child of the treeitem. Can I change the test > case to get childAtIndex(1)? > What is the first child? We want to make sure that the things we're now exposing are children of tree items only. presumably the first child here is a tree item? > Thanks
Nan Wang
Comment 14 2015-04-21 23:44:35 PDT
(In reply to comment #13) > (In reply to comment #12) > > (In reply to comment #11) > > > (In reply to comment #10) > > > > Created attachment 251303 [details] > > > > Archive of layout-test-results from ews103 for mac-mavericks > > > > > > > > The attached test failures were seen while running run-webkit-tests on the > > > > mac-ews. > > > > Bot: ews103 Port: mac-mavericks Platform: Mac OS X 10.9.5 > > > > > > This seems like a real failure this one > > > > > > PASS resultElement.role is 'AXRole: AXOutline' > > > -PASS resultElement.childAtIndex(0).childAtIndex(0).stringValue is 'AXValue: > > > tree item' > > > +FAIL resultElement.childAtIndex(0).childAtIndex(0).stringValue should be > > > AXValue: tree item. Was AXValue: •. > > > PASS resultElement.role is 'AXRole: AXStaticText' > > > > Since the fix is exposing all children of treeitem, the test is failed > > because the text is the second child of the treeitem. Can I change the test > > case to get childAtIndex(1)? > > > > What is the first child? We want to make sure that the things we're now > exposing are children of tree items only. presumably the first child here is > a tree item? > > > Thanks The structure is "<ul role="tree"><li role="treeitem">tree item</li></ul>" so the first child is the list marker, and second child is the static text. Thanks.
chris fleizach
Comment 15 2015-04-21 23:49:03 PDT
(In reply to comment #14) > (In reply to comment #13) > > (In reply to comment #12) > > > (In reply to comment #11) > > > > (In reply to comment #10) > > > > > Created attachment 251303 [details] > > > > > Archive of layout-test-results from ews103 for mac-mavericks > > > > > > > > > > The attached test failures were seen while running run-webkit-tests on the > > > > > mac-ews. > > > > > Bot: ews103 Port: mac-mavericks Platform: Mac OS X 10.9.5 > > > > > > > > This seems like a real failure this one > > > > > > > > PASS resultElement.role is 'AXRole: AXOutline' > > > > -PASS resultElement.childAtIndex(0).childAtIndex(0).stringValue is 'AXValue: > > > > tree item' > > > > +FAIL resultElement.childAtIndex(0).childAtIndex(0).stringValue should be > > > > AXValue: tree item. Was AXValue: •. > > > > PASS resultElement.role is 'AXRole: AXStaticText' > > > > > > Since the fix is exposing all children of treeitem, the test is failed > > > because the text is the second child of the treeitem. Can I change the test > > > case to get childAtIndex(1)? > > > > > > > What is the first child? We want to make sure that the things we're now > > exposing are children of tree items only. presumably the first child here is > > a tree item? > > > > > Thanks > > The structure is "<ul role="tree"><li role="treeitem">tree item</li></ul>" > so the first child is the list marker, and second child is the static text. > Seems reasonable to change that then. thanks > Thanks.
Nan Wang
Comment 16 2015-04-22 00:09:30 PDT
Created attachment 251304 [details] patch3 fix broken test cases
WebKit Commit Bot
Comment 17 2015-04-22 00:11:04 PDT
Attachment 251304 [details] did not pass style-queue: ERROR: LayoutTests/ChangeLog:7: Line contains tab character. [whitespace/tab] [5] ERROR: Source/WebCore/ChangeLog:7: Line contains tab character. [whitespace/tab] [5] Total errors found: 2 in 7 files If any of these errors are false positives, please file a bug against check-webkit-style.
Nan Wang
Comment 18 2015-04-22 00:15:39 PDT
Created attachment 251305 [details] patch4 fix code style
WebKit Commit Bot
Comment 19 2015-04-22 10:37:53 PDT
Comment on attachment 251305 [details] patch4 fix code style Clearing flags on attachment: 251305 Committed r183111: <http://trac.webkit.org/changeset/183111>
WebKit Commit Bot
Comment 20 2015-04-22 10:38:00 PDT
All reviewed patches have been landed. Closing bug.
chris fleizach
Comment 22 2015-04-22 13:43:11 PDT
We should add a test expectation for fail on windows until someone on windows can look at it. I can do this by the EOD if no one else is able to (In reply to comment #21) > The new test fails on Windows: > https://webkit-test-results.appspot.com/dashboards/flakiness_dashboard. > html#showAllRuns=true&tests=accessibility%2Ftreeitem-child-exposed.html
Note You need to log in before you can comment on or make changes to this bug.