AX: WebKit does not expose text fields inside tree views. https://bugs.webkit.org/show_bug.cgi?id=142196

Patch by Nan Wang <nanwang1101@yahoo.com> on 2015-04-22
Reviewed by Chris Fleizach.

Source/WebCore:

The problem is that any object in a tree which is not a static text
or treeitem will be ignored. Fixed it by exposing the children of treeitem.

Test: accessibility/treeitem-child-exposed.html

* accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::isAllowedChildOfTree):

LayoutTests:

Tests for treeitem’s children’s accessibility.
Also fixed the search predicate test for treeitem,
the static text is the second child of treeitem and
list marker is the first child.

* accessibility/treeitem-child-exposed-expected.txt: Added.
* accessibility/treeitem-child-exposed.html: Added.
* platform/mac/accessibility/search-predicate-expected.txt:
* platform/mac/accessibility/search-predicate.html:

Canonical link: https://commits.webkit.org/162008@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@183111 268f45cc-cd09-0410-ab3c-d52691b4dbfc